resources/style.css
* {
    color: #363636;
    font-family: Gilroy;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    

}

@font-face {
    font-family: Gilroy;
    src: url(../../../../Downloads/Gilroy-FREE.zip);
    font-family: 'Gilroy Bold';
    src: url(../../../../Downloads/gilroy-bold-cufonfonts/Gilroy-Bold.ttf);
    font-family: 'Gilroy Heavy';
    src: url(../../../../Downloads/gilroy-bold-cufonfonts/Gilroy-Heavy.ttf);
    font-family: 'Gilroy Medium';
    src: url(../../../../Downloads/gilroy-bold-cufonfonts/Gilroy-Medium.ttf);
    font-family: 'Gilroy Regular';
    src: url(../../../../Downloads/gilroy-bold-cufonfonts/Gilroy-Regular.ttf);
    font-family: 'Gilroy Light';
    src: url(../../../../Downloads/gilroy-bold-cufonfonts/Gilroy-Light.ttf);
}
/* Background Image */

html {
    /* The image used */
      background: radial-gradient(rgb(255, 255, 255, 0.5), rgba(6, 68, 151, 0.1)), 
      url(./images/Background.jpg) no-repeat center center fixed; 
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
      overflow-x: hidden;
  } 

/* Basic Text Styling and more*/

p {
    font-size: 36px;
}

h1 {
    font-size: 50px;

}

/* Nav Bar */

nav {
    background-color: #064497;
    border: calc(0.5vw - 2px) solid #064497;
    border-radius: 0.5vw 100px 100px 200px;
    margin: 1vw;
    display: table;
    margin-left: auto;
    padding: 0;
    position: fixed;
    right: 2%;
    z-index: 1000;
}

ul li{
    display: inline-block;
    margin: 5px;
}

nav ul li a{
    font-family: 'Gilroy-Bold';
    font-size: 2vw;
    color: white;
    margin: 0.5vw;
    text-decoration: none;
}

#first-child {
    margin-left: 2vw;
}

.burger {
    display: none;
    cursor: pointer;
}

.burger div{
    width: 25px;
    height: 4px;
    background-color: white;
    margin: 5px;
    transition: all 0.3s ease;
}

@media screen and (max-width:768px) {

    /* Nav Bar */
    nav {
        display: flex;
        justify-content: space-around;
        align-items: center;
        top: 4vh;
        margin: 0;
        padding: 0;
        position: relative;
        border: none;

    }

    .nav-links {
        position: fixed;
        display: flex;
        width: 50%;
        justify-content: space-around;
        right: 0px;
        height: 90vh;
        top: 4vh;
        background-color: #064497;
        display: flex;
        flex-direction: column;
        align-items: center;
        transform: translateX(150%);
        transition: transform 0.5s ease-in-out;
        right: 5vh;
        border-radius: 1vh 10vh 10vh 10vh;
    }

    .nav-links li {
        list-style: none;
        font-size: 2vh;
    }

    .nav-links a {
        font-size: 8vw;
        color: white;
        text-decoration: none;

    }

    .burger {
        display: block;
        background-color:#064497;
        padding: 5px;
        border-radius: 1px 50% 50% 50%;
        position: fixed;
        margin: 0;
        left: 2vh;
    }

    .nav-active {
        transform: translateX(0%);
    }

    @keyframes navLinkFade {
        from {
            opacity: 0;
            transform: translateX(50px);
        }
        to{
            opacity: 1;
            transform: translateX(0px);
        }
        
    }

    .toggle .line1 {
        transform: rotate(-45deg) translate(-6px, 6px);
    }
    .toggle .line2 {
        opacity: 0;
    }
    .toggle .line3 {
        transform: rotate(45deg) translate(-6px, -6px);

    }
}
/* Paper Plane */

.paper-plane {
    height: 20vh;
    top: 10%;
    left: -200px;
    overflow-x: hidden;
    position: absolute;
    min-height: 8vh;
}



/* Main Section */

#home-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

#my-photo {
    border-radius: 0.5vw 50% 50% 50%;
    width: 30%;
    display: block;
    margin: 2vw;
    max-width: 100%;
}

.blue {
    color: #064497;
    font-weight: bold;
}

#text-container {
    display: flex;
    max-width: 40%;
    flex-direction: column;
}

#text-container p {
    font-size: 2.5vw;
}

#text-container h1 {
    margin: 0;
    font-size: 5vw;

}

#darrow {
    display: block;
    width: 30%;
    margin: 0 auto;
}

@media screen and (max-width:768px) {
    #home-container {
        flex-direction: column;
    }
    #my-photo {
        width: 40%;
    }

    #text-container {
        max-width: 60%;
    }

    #text-container p {
        font-size: 4vw;
        align-self: center;
        text-align: center;
    }
    
    #text-container h1 {
        font-size: 8vw;
        text-align: center;
    
    }
    
}

/* Test Sections */

section {
    height: 100vh;
    scroll-snap-align: center;
}

.container {
    scroll-snap-type: y mandatory;
    overflow-y: scroll;
    height: 100vh; 
}


#home {
    height: 100vh;
}

#about-me, #projects, #contact-me {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#about-me {
    background-color: blue;
    opacity: 0.5;
}

#projects {
    background-color: red;
    opacity: 0.5;
}

#contact-me {
    background-color: green;
    opacity: 0.5;
}

